--- a/main/resources/application.yml
+++ b/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
     url : jdbc:mysql://localhost:3306/board?verifyServerCertificate=false&useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
     username : root
     password : 1838
+  thymeleaf:
+    prefix: classpath:templates/
+    suffix: .html
+
+
 
   jpa:
     hibernate:
